Fixing a slight alignment issue

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2942,3 +2942,8 @@ a.logo-img {
 	font-size: 60%;
 	margin-left: 2px;
 }
+
+.portion-size {
+	font-size: 80%;
+	margin-bottom: 4px;
+}
